🐛 FIX: footer horizontal overflow

--- a/src/scss/abstracts/_breakpoints.scss
+++ b/src/scss/abstracts/_breakpoints.scss
@@ -1,6 +1,6 @@
 @mixin respond-to($breakpoint) {
 	@if $breakpoint == "medium" {
-		@media (min-width: 45em) {
+		@media (min-width: 50em) {
 			@content;
 		}
 	} @else if $breakpoint == "large" {
