--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -9,12 +9,21 @@
   background-color: var(--clr-neutral-400);
   color: var(--clr-neutral-100);
 
+  .logo {
+    margin-inline: auto;
+
+    @include respond-to("medium") {
+      margin-inline-start: 0;
+    }
+  }
+
   > .split {
     gap: 3rem;
+    justify-content: space-between;
   }
 
   nav {
-    gap: 3rem;
+    gap: 2rem;
 
     li:first-of-type {
       font-weight: 700;
@@ -30,6 +39,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    gap: 0.75rem;
 
     @include respond-to("medium") {
       justify-content: flex-end;
